<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutWeatherResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewWeatherName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title."
            tools:text="@string/weather_name" />

        <TextView
            android:id="@+id/textViewWeatherTemp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2."
            tools:text="@string/temp" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textViewWeatherTempMinMax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1."
            tools:text="@string/max_min_temp" />

        <TextView
            android:id="@+id/textViewWeatherWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1."
            tools:text="@string/speed_wind" />

        <TextView
            android:id="@+id/textViewWeatherCloudy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1."
            tools:text="@string/cloudy" />

        <TextView
            android:id="@+id/textViewWeatherMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1."
            tools:text="@string/main" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonDownloadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/turquoise"
        android:text="@string/download_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWeatherResult" />

    <ImageView
        android:id="@+id/imageViewNewFile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/download_file_description"
        android:gravity="center_horizontal"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialButtonDownloadFile"
        tools:src="@drawable/in_the_space_514627" />

    <LinearLayout
        android:id="@+id/layoutDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialButtonDownloadFile">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linearProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialButtonDownloadFile"
            app:trackColor="@color/navy_blue" />

        <TextView
            android:id="@+id/textViewInfoDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2.Info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearProgressIndicator"
            tools:text="@string/download_info" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewErrorDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/download_error"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2.Error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWeatherResult" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/error"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2."
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>